# PEE5

./: .gitignore  Cargo.toml  Privacy-Policy.md  README.md  Terms-of-Service.md  setup.py
.github/: FUNDING.yml  dependabot.yml
src/: config.rs  global_config.rs  main.rs
src/commands/: add_role.rs  afk.rs  ask_gpt.rs  automod.rs  avatar.rs  blacklist_word.rs  chat.rs  config.rs  download_video.rs  echo.rs  help.rs  imagine.rs  level.rs  mod.rs  purge.rs  remove_blacklisted_word.rs  remove_role.rs  remove_warn.rs  saved_imagines.rs  timeout.rs  warn.rs  warns.rs  xp.rs
src/plugins/: activity.rs  afk.rs  automod.rs  chat.rs  config.rs  logging.rs  mod.rs  xp.rs
