[package]
name = "pee5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
openai_gpt_rs = "0.2.0"
rand = "0.8.5"
serde = "1.0.160"
reqwest = { version = "0.11.4", features = ["blocking", "default-tls"] }
scraper = "0.13.0"
select = "0.6.0"
rustube = "0.6.0"
